--- a/front/my-app/package.json
+++ b/front/my-app/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.8.2"
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-config-airbnb": "^16.1.0"
   }
 }
