--- a/back/.eslintrc
+++ b/back/.eslintrc
@@ -11,6 +11,8 @@
     "modules": true
   },
   "rules": {
-    "comma-dangle": 0,
-  }
+    "comma-dangle": 0
+  },
+  "import/no-extraneous-dependencies": ["error", {
+    "devDependencies": ["test/"]}]
 }
