--- a/back/.eslintrc
+++ b/back/.eslintrc
@@ -10,9 +10,10 @@
     "classes": true,
     "modules": true
   },
-  "rules": {
-    "comma-dangle": 0
-  },
-  "import/no-extraneous-dependencies": ["error", {
-    "devDependencies": ["test/"]}]
+  "import/no-extraneous-dependencies": [
+    "error",
+    {
+      "devDependencies": ["test/"]
+    }
+  ]
 }
