--- a/back/package.json
+++ b/back/package.json
@@ -2,10 +2,11 @@
   "name": "back",
   "version": "0.0.0",
   "private": true,
-  "main": "app.js",
+  "main": " app.js",
   "scripts": {
     "start": "node ./bin/start",
-    "test": "mocha --recursive './test/*Test.js' --compilers js:babel-core/register"
+    "test":
+      "mocha --recursive './test/*Test.js' --compilers js:babel-core/register"
   },
   "dependencies": {
     "babel-core": "^6.25.0",
@@ -28,7 +29,6 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.2.1"
+    "eslint-plugin-mocha": "^4.11.0"
   }
 }
