--- a/front/my-app/.eslintrc.json
+++ b/front/my-app/.eslintrc.json
@@ -1,10 +1,9 @@
 {
-    "extends": "airbnb",
-    "env": {
-      "browser": true
-    },
-    "rules": {
-      "react/jsx-filename-extension": 0,
-      "jsx-a11y/href-no-hash": "off"
-    }
+  "extends": "airbnb",
+  "env": {
+    "browser": true
+  },
+  "rules": {
+    "react/jsx-filename-extension": 0
   }
+}
