--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 
 # dependencies
 node_modules
+./back/node_modules
+./back/npm-debug.log
+
 # testing
 /coverage
 
@@ -18,5 +21,6 @@ node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock*
 package-lock.json*
 
