--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 # dependencies
 node_modules
 
-
 # testing
 /coverage
 
@@ -16,6 +15,7 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+.vscode
 
 npm-debug.log*
 yarn-debug.log*
