--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-hash-link": "^1.2.0",
     "react-scripts": "1.1.4",
     "react-transition-group": "^2.3.1",
     "react-video-cover": "^1.2.0",
