--- a/back/package.json
+++ b/back/package.json
@@ -19,8 +19,9 @@
     "express": "^4.15.4",
     "morgan": "^1.8.2",
     "mysql": "^2.15.0",
-    "serve-favicon": "^2.4.3",
-    "nodemon": "^1.17.5"
+    "nodemailer": "^4.6.6",
+    "nodemon": "^1.17.5",
+    "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
