--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "eslint": "^4.19.1",
     "material-ui": "^1.0.0-beta.47",
     "material-ui-icons": "^1.0.0-beta.36",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
