--- a/back/package.json
+++ b/back/package.json
@@ -13,14 +13,19 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
     "debug": "^3.0.0",
     "express": "^4.15.4",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "^1.8.2",
     "mysql": "^2.15.0",
     "nodemailer": "^4.6.6",
     "nodemon": "^1.17.5",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.4.3"
   },
   "devDependencies": {
