--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "moment-timezone": "^0.5.20",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
+    "bcrypt": "^2.0.1",
     "react-dom": "^16.3.2",
     "react-moment": "^0.7.6",
     "react-redux": "^5.0.7",
