--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.3.2",
     "react-moment": "^0.7.6",
     "react-redux": "^5.0.7",
+    "react-responsive": "^5.0.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-hash-link": "^1.2.0",
