--- a/front/package.json
+++ b/front/package.json
@@ -33,11 +33,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-with-back": "concurrently \"react-scripts start\" \"nodemon ./back/bin/start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "concurrently": "^3.6.1",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.8.2",
     "eslint-config-airbnb": "^16.1.0"
