--- a/front/package.json
+++ b/front/package.json
@@ -32,8 +32,7 @@
     "typeface-roboto": "0.0.54"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start-with-back": "concurrently \"react-scripts start\" \"nodemon ./back/bin/start\"",
+    "start": "concurrently \"react-scripts start\" \"nodemon ./back/bin/start\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
