--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "proxy": "http://localhost:5000/",
   "dependencies": {
     "@material-ui/core": "^1.0.0",
